--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="btn_Gasto">Gastos</string>
     <string name="btn_movimientos">Movimientos</string>
     <string name="btn_inicio">Inicio</string>
+    <string name="btn_guardar">Guardar</string>
 
     <string name="tv1">Mi Cartera App</string>
     <string name="tv2">Balance mensual + remanentes</string>
@@ -19,6 +20,10 @@
 
 
     <string name="edt_n1">0</string>
+
+
+
+    <string name="edt_txt">Escriba una descripcion breve</string>
 
 
 
